feat: adicionando cadastro e corrigindo login

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "SymmetricSecurityKey": "AIGHSAKIUFGDSIDFUGASIUFGA2019578!#@@$#@%$",
   "ConnectionStrings": {
     "ExemploConnection1": "server=localhost ; database=dbExemplo ; trusted_connection=true ; trustservercertificate=true", //String de conexão com autenticação via windows autentication 
-    "ExemploConnection2": "server=localhost ; database=dbExemplo ; user id=nomeusuario ; password=senhadousuario" //String de conexão com autenticação via usuário sql
+    "ConnectionPostGree": "Host=localhost;Port=5432;Database=Aoba;Username=postgres;Password=1234"
+
   }
 }
