--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,7 +9,7 @@
   "SymmetricSecurityKey": "AIGHSAKIUFGDSIDFUGASIUFGA2019578!#@@$#@%$",
   "ConnectionStrings": {
     "ExemploConnection1": "server=localhost ; database=dbExemplo ; trusted_connection=true ; trustservercertificate=true", //String de conexão com autenticação via windows autentication 
-    "ConnectionPostGree": "Host=localhost;Port=5432;Database=Aoba;Username=postgres;Password=1234"
+    "ConnectionPostGree": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=1234"
 
   }
 }
